--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -1,6 +1,4 @@
-
-
-
+body {font-family: helvetica, arial, serif;}
 /* HIDE ELEMENTS */
 #sidebar, .preview-top, #notice-item-wrapper {
 	display: none;
