--- a/public/stylesheets/jquery-ui-1.7.1.custom.css
+++ b/public/stylesheets/jquery-ui-1.7.1.custom.css
@@ -50,7 +50,7 @@
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #dddddd; background: #eeeeee url(/images/jqueryui-lightness/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
-.ui-widget-header {  background: #f6a828 url(/images/jqueryui-lightness/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x; color: #ffffff; }
+.ui-widget-header {  background: #f6a828 url(/images/jqueryui-lightness/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x; color: #ffffff; }           
 .ui-widget-header a { color: #ffffff; }
 
 /* Interaction states
@@ -209,7 +209,7 @@
 .ui-icon-script { background-position: -240px -128px; }
 .ui-icon-alert { background-position: 0 -144px; }
 .ui-icon-info { background-position: -16px -144px; }
-.ui-icon-notice { background-position: -32px -144px; }
+/*.ui-icon-notice { background-position: -32px -144px; }   */
 .ui-icon-help { background-position: -48px -144px; }
 .ui-icon-check { background-position: -64px -144px; }
 .ui-icon-bullet { background-position: -80px -144px; }
@@ -362,7 +362,7 @@
 .ui-draggable .ui-dialog-titlebar { cursor: move; }
 /* Progressbar
 ----------------------------------*/
-.ui-progressbar { height:2em; text-align: left; }
+
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; }/* Resizable
 ----------------------------------*/
 .ui-resizable { position: relative;}
