Maximum number of template per shop is now 10. Also, some refactoring:   * PrintTemplate#load_from_file!() is now a class method called create_from_file()   * JS FIX: correctly display number of selected template (and show/hide print button accordingly)

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -40,5 +40,5 @@
 
 <% content_for :javascript do %>
   Templates.initialize('<%= @order.id %>');
-  $("#selected-templates :checkbox").each(function() { Templates.updateSelection($(this)); });
+  Templates.checkAll();
 <% end %>
