--- a/app/views/orders/_template_checkbox.html.erb
+++ b/app/views/orders/_template_checkbox.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for :javascript do %>
-<!-- click and keypress are also explicitly listed here, as IE does not behave properly for change events only :( -->
+<!-- click and keypress are explicitly listed here (instead of change), as IE does not behave properly for change events only :( -->
 $("#template-checkbox-<%= tmpl.id %>").bind("click keypress", function() {
   Templates.updateSelection($(this));
 });
