PrintTemplates are restricted to 10 per shop (some refactoring). And more fixes for IE:   * click event is now attached directly to the checkbox element, oldschool style (also works for keypress apparently)   * including special stylesheet and javascript file only for IE7   * show error message when user tries to click on "Add template", but already has maximum number of templates (10 at the moment)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
   <title><%= APP_NAME %></title>
   <%= stylesheet_link_tag 'jquery-ui-1.7.1.custom', 'style', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
+  <%= javascript_include_tag :defaults, 'jquery-ui' %> 
+
   <!--[if IE 7]>
-	 <%= stylesheet_link_tag 'style-ie7', :media => 'screen' %>   
+	  <%= stylesheet_link_tag 'style-ie7', :media => 'screen' %>
+	  <%= javascript_include_tag 'ie-fixes' %> 
 	<![endif]-->
-  <%= javascript_include_tag 'ie-fixes', :defaults, 'jquery-ui' %> 
    
   <% javascript_tag do %>
     <% if flash[:notice] %>
