--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,6 +112,10 @@ a:hover, a:focus, a:active {color:#265d8b;}
 	vertical-align: top;
 }
 
+/* =============== */
+/* = Order Index = */
+/* =============== */
+
 
 /* Flash errors and notices */
 
