--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Your orders</h1>
 <p class="note">Select the order you want to print. You can choose different templates for various purposes.</p>
 
+<!-- The dialog is going to be populated via AJAX and opened via JQueryUI -->
 <div id="modal-dialog"></div>
 
 
