--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,11 @@ a:hover, a:focus, a:active {color:#265d8b;}
 #login .sidebar-block {padding:15px 12px 0 12px;}
 #login .logo { position:relative;  margin-top:-27px; margin-left:-4px;   }        
 
+/* =============== */
+/* = Order index = */
+/* =============== */     
+
+
 /* ======== */
 /*  Lightbox  */
 /* ======== */
