changed order index page, added pixel printer logo

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -20,7 +20,7 @@
     <% end %>
   </div>
    <div> </div>
-  <img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo"   />
+  <img src="../images/logo.png"  alt="Logo" class="logo"   />
   
 </div>     
 <% content_for :javascript do %>
