--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -30,7 +30,7 @@
     <p style="font-size: 12px; 	text-align: center;"><%= content_tag :span, "0 documents", :id => "template-amount" %> will be printed.</p>
 	</div><!-- last sidebar block -->
 
-	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo"   />
+	<img src="../images/logo.png"  alt="Logo" class="logo"   />
 </div><!--sidebar-->
 
 <!-- This is populated later via AJAX and popped up with the dialog function of JQueryUI -->
