--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,41 +1,34 @@
-
-
-<!-- The dialog is going to be populated via AJAX and opened via JQueryUI -->
-<div id="modal-dialog"></div>
-
-
-
-
-	
-
 <div id="preview" style="width:600px; margin:auto" >
-<div class="preview-top" style="float:left"></div>
-<div class="preview-wrapper" style="float:left; margin-left:1px">
-  <div class="preview-content">
-    
-		<h1>Your orders</h1>
-		<p class="note">Select the order you want to print. You can choose different templates for various purposes.</p>
-		<div class="itemlist">
-		  <% if @orders.blank? %>  
-		  <em class="note">There are no orders in your store.</em>
-		  <% else %>
-		  <ul>
-		    <% @orders.each do |order| %>
-		    <li>
-		      <div class="order">
-		        <strong><%= link_to order.name, :action => 'show', :id => order %></strong>
-		        <span class="price"><%= order.total_price %> <%= order.currency %></span>
-		        <span class="highlight"><%= order.financial_status %></span>
-		        by <span class="note"><%= order.billing_address.name %></span>
-		      </div>
-		    </li>
-		    <% end %>
-		  </ul>
-		  <% end %>
-		</div>
+  <div class="preview-top" style="float:left"></div>
+    <div class="preview-wrapper" style="float:left; margin-left:1px">
+      <div class="preview-content">
+  
+    		<h1>Your orders</h1>
+    		<p class="description">
+    		  Usually you won't see this page, because you select the order from your Shopify admin interface and then get redirected directly to the order preview on this application.
+    		</p>
+    		<div class="itemlist">
+    		  <% if @orders.blank? %>  
+    		  <em class="note">There are no orders in your store. You need a visible order first to see a preview of any template.</em>
+    		  <% else %>
+    		  <em>For convenience we fetched your latest <%= pluralize(@orders.size, 'order') %>. Please select the one you want to preview:
+    		  <ul>
+    		    <% @orders.each do |order| %>
+    		    <li>
+    		      <div class="order">
+    		        <strong><%= link_to order.name, :action => 'show', :id => order %></strong>
+    		        <span class="price"><%= order.total_price %> <%= order.currency %></span>
+    		        <span class="highlight"><%= order.financial_status %></span>
+    		        by <span class="note"><%= order.billing_address.name %></span>
+    		      </div>
+    		    </li>
+    		    <% end %>
+    		  </ul>
+    		  <% end %>
+    		</div>
 		
-  </div>
-</div> <!-- preview-wrapper -->
-<div class="preview-bottom" style="float:left"></div> 
+      </div>
+    </div> <!-- preview-wrapper -->
+  <div class="preview-bottom" style="float:left"></div> 
 </div> <!-- preview -->     
 
