Disabled in editmode for IE < 8. Showing a preview now scrolls directly to it.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
 
   <!--[if IE 7]>
 	  <%= stylesheet_link_tag 'ie7-fixes', :media => 'screen' %>
-	  <%= javascript_include_tag 'ie7-fixes' %> 
+	<![endif]-->
+  
+  <!--[if IE]>
+    <%= javascript_include_tag 'ie-fixes' %> 
 	<![endif]-->
    
   <% javascript_tag do %>
