--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -12,7 +12,7 @@ href #265d8b (blue)
 img {border:0;}
 body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Arial',sans-serif; }
 
-.clearfix:after {content: "."; display:block; height:0; clear:both; visibility:hidden; }                                                
+/*.clearfix:after {content: "."; display:block; height:0; clear:both; visibility:hidden; } */
 .left {float:left;}
 .right {float:right;}
 /* ============= */
@@ -97,7 +97,7 @@ a:hover, a:focus, a:active {color:#265d8b;}
 #login p strong   {font-size:12px; color:#111;} /* for the www */
 #login p.textfield { margin-bottom: 4px; padding-bottom: 0px;}
 #login p.description {margin-top: 0px; font-size: 11px; color:#87772c;}
-#login p.description a {color:#97873c; text-decoration: none;}
+#login p.description a {color:#97873c; font-size: 11px; text-decoration: none;}
 #login p.description a:hover {color:#97873c; text-decoration: underline;}
 #login p.description span {margin-top: 12px;}
 #login p.low-em {font-size:13px; font-style:italic;color:#87772c; padding-bottom:30px;  } /* for the register note */  
