--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -27,11 +27,11 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 .sidebar-block:first-child {background-position: 0 -17px;}
 #wrapper #sidebar .logo  {margin:-20px 0 0px -4px; }
 
-#preview {padding-bottom:70px; clear:both;zoom:1; margin-left: 230px;} /* the preview element has inline css for order-index */
-#preview .preview-top{background:url('../images/paper-top.png')  no-repeat  ; /*float:right;*/ height:70px;width:712px; margin:45px 0 0 0;}
-#preview .preview-wrapper {background:url('../images/paper-middle.png') ;width:711px; /*float:right;*/}
+#preview {padding-bottom:70px; clear:both;zoom:1;} /* the preview element has inline css for order-index */
+#preview .preview-top{background:url('../images/paper-top.png')  no-repeat  ; float:right; height:70px;width:712px; margin:45px 0 0 0;}
+#preview .preview-wrapper {background:url('../images/paper-middle.png') ;width:711px; float:right;}
 #preview .preview-content { margin:-40px 0 0 0; padding:40px 40px 0 40px; clear:both;}
-#preview  .preview-bottom {background:url('../images/paper-bottom.png') no-repeat; width:712px; height:70px; margin-bottom:0px; /*float:right*/;} 
+#preview  .preview-bottom {background:url('../images/paper-bottom.png') no-repeat; width:712px; height:70px; margin-bottom:0px; float:right;} 
 #preview .description { font-size: 14px; color: #666;}
 
 /* ============== */
