Renaming production database and session to new app name. Some minor refactoring.

--- a/app/views/orders/_template_checkbox.html.erb
+++ b/app/views/orders/_template_checkbox.html.erb
@@ -1,4 +1,4 @@
-<% content_tag(:li, :class => "template-item", :id => "template-item-#{tmpl.id}") do %>
+<li id="template-item-<%= tmpl.id %>" class="template-item">
   <span class="template-options" style="display: <%= defined?(options_hidden) ? 'none' : 'inline' %>">   
     <%= link_to_remote image_tag("trash.gif"), :url => tmpl, :method => :delete, :confirm => "Are you sure you want to delete the template named #{tmpl.name}?" %>
     <%= link_to_remote "edit", :url => [:edit, tmpl], :method => 'get' %>
@@ -6,4 +6,4 @@
 
   <%= check_box_tag 'print_templates[]', tmpl.id, tmpl.default, :id => "template-checkbox-#{tmpl.id}", :onclick => "Templates.updateSelection($(this));" %>
   <%= label_tag "template-checkbox-#{tmpl.id}", tmpl.name %>
-<% end %>
+</li>
