Big refactoring:   * Put extensions (monkeypatches) under lib/ext   * ShopifyLoginProtection now caches the remote store   * Redirect to shop admin interface with https first if available   * Fixed tests   * removing unneeded ignored files (log, .DS_Store)

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,7 +7,7 @@
     		<p class="description">
     		  You got redirected to this screen because there is no order selected yet.
     		  To get to the order preview screen either select an order in the 
-    		  <%= link_to "Shopify admin interface", session[:shopify] %>
+    		  <%= link_to "Shopify admin interface", shop_admin_url('orders') %>
     		  or click on one of the latest orders below.
     		</p>
     		<div class="itemlist">
