Updated Readme to textile with screenshots. Renamed "package slip" to "packing slip".

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,7 +1,7 @@
 
 <div id="login">
   <div id="login-wrapper" >
-    <h1>Pixel Printer</h1>
+    <h1><%= APP_NAME %></h1>
     <p class="description">
       Invoices, Package Slips and other customizable templates for<br/>
       your orders in <%= link_to "Shopify", "http://www.shopify.com" %>.
