--- a/db/printing/variable_reference.liquid
+++ b/db/printing/variable_reference.liquid
@@ -4,7 +4,7 @@
 <b>Order name</b>:      {{name}} (different variable, same content)<br/>
 <b>Order Number</b>:    {{order_number}}<br/><br/>
 
-<b>Gateway used</b>:    {{ gateway }}</br>
+<b>Gateway used</b>:    {{ gateway }}<br/>
 <b>Shipping method</b>: {{ shipping_method.title }}<br/><br/>
 
 <b>Subtotal price</b>:  {{ subtotal_price | money }}<br/>
