--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -229,3 +229,20 @@ p.buttons {background:none; border:none; margin:0;}
 .help ul {padding-top:0; margin-top:0; padding-left:20px;}
 .help p {margin:2px 0 3px 0; font-size:13px;}
 .help {padding-bottom:20px; padding-top:5px;}
+
+
+/* Order status */
+.o-status {
+	font-size: 12px;
+	font-weight: normal;
+}
+
+.o-filed, .o-pending, .o-unshipped, .r-match-unavailable {
+	background-color: #ddd;
+	color: #000;
+}
+
+.o-paid, .o-authorized, .o-shipped, .o-partial {
+	background-color: #6AB32F;
+	color: #fff;
+}
