Linked to new Wiki page for PixelPrinter.

--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="template-code">    
-    <%= link_to "Show help", "http://wiki.github.com/Shopify/pixelprinter/template-editing", :target => 'github' %>
+    <%= link_to "Show help", "http://wiki.shopify.com/PixelPrinter#Template_editing", :target => 'wiki' %>
     <%= f.text_area :body, :id => 'template_editor' %>  
   </div>
 
