--- a/db/printing/invoice.liquid
+++ b/db/printing/invoice.liquid
@@ -40,8 +40,9 @@
   {{ shipping_address.name }}<br/>
   {{ shipping_address.company }}<br/>
   {{ shipping_address.street }}<br/>
-  {{ shipping_address.city }}<br/>
-  {{ shipping_address.zip }}<br/>
+  {{ shipping_address.city }}
+  {{ shipping_address.province }}
+  {{ shipping_address.zip | upcase }}
   {{ shipping_address.country }}<br/>
 </div>
 
